--- a/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
+++ b/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
@@ -10,11 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "fb7c6eba-2357-4ab1-8ecb-1870367fa315",
    "metadata": {
     "cellView": "form",
-    "id": "9n9_cTveKmse"
+    "id": "9n9_cTveKmse",
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -30,16 +33,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0343b664",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "# The following lines adjust the granularity of reporting.\n",
     "pd.options.display.max_rows = 10\n",
     "pd.options.display.float_format = \"{:.1f}\".format\n",
     "pd.set_option('display.max_columns', None)\n",
-    "os.chdir('/tf')\n",
+    "os.chdir('/data')\n",
     "PGUSER = os.getenv('POSTGRES_USER')\n",
     "PGPW = os.getenv('POSTGRES_PW')\n",
     "PGDB = os.getenv('POSTGRES_DB')"
@@ -47,9 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d2caaf18-3142-42ae-b954-7cbece859f51",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -72,9 +83,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "38eb026b-569f-4d57-909d-0c0d41560e2a",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "#create a list of full path file names from directory\n",
@@ -91,9 +106,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "c603c697",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "files = getFileList()\n",
@@ -105,7 +124,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b2cb67e6-d14d-4229-9a13-469d84a363ac",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "#set up parallel computing cluster\n",
@@ -118,7 +141,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "774b762a-433c-4c58-9e0d-1439f730870f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -135,7 +162,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e0abc366-8d44-4c95-98fb-6cd617aa8b4b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "# transfer to postgres go brr\n",
@@ -148,7 +179,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "17828805-dcb4-44d0-a053-8ca77d030e51",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "#uncomment to install more modules\n",
@@ -163,21 +198,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
