--- a/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
+++ b/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
@@ -10,14 +10,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "a7188383",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %pip install geoalchemy2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "fb7c6eba-2357-4ab1-8ecb-1870367fa315",
    "metadata": {
     "cellView": "form",
-    "id": "9n9_cTveKmse",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "9n9_cTveKmse"
    },
    "outputs": [],
    "source": [
@@ -33,13 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0343b664",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# The following lines adjust the granularity of reporting.\n",
@@ -47,6 +50,7 @@
     "pd.options.display.float_format = \"{:.1f}\".format\n",
     "pd.set_option('display.max_columns', None)\n",
     "os.chdir('/data')\n",
+    "load_dotenv('docker/.env')\n",
     "PGUSER = os.getenv('POSTGRES_USER')\n",
     "PGPW = os.getenv('POSTGRES_PW')\n",
     "PGDB = os.getenv('POSTGRES_DB')"
@@ -54,17 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d2caaf18-3142-42ae-b954-7cbece859f51",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def pushToPostGresDB(fi: str, db: str, user: str, pw: str) -> None:\n",
+    "def pushToPostGresDB(tableName: str, fi: str, db: str, user: str, pw: str) -> None:\n",
     "    import geopandas as gpd\n",
     "    from DataService import DataService\n",
     "    \n",
@@ -73,7 +73,6 @@
     "\n",
     "    geodf = gpd.read_file(fi, encoding=\"utf-8\")\n",
     "    geodf = geodf.set_crs(4617, allow_override=True)\n",
-    "    tableName = fi[-3:]+fi[:-4]\n",
     "    \n",
     "    geodf.to_postgis(tableName, db_con, index=False, if_exists='replace')\n",
     "    return fi\n",
@@ -83,116 +82,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "38eb026b-569f-4d57-909d-0c0d41560e2a",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
+   "execution_count": 5,
+   "id": "73a8d6ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'data/2021CensusAgRegions/lcar000b21a_e.dbf'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "#create a list of full path file names from directory\n",
-    "def getFileList():\n",
-    "    DATA_DIR = \"Data/\"\n",
-    "    fullPathNames = []\n",
-    "    for fi in os.listdir(DATA_DIR):\n",
-    "        fi = os.path.join(DATA_DIR, fi)\n",
-    "        if os.path.isfile(fi):\n",
-    "            if fi.endswith(\"dbf\"): # or fi.endswith(\"shp\") :\n",
-    "                fullPathNames.append(fi)\n",
-    "    return fullPathNames\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c603c697",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "files = getFileList()\n",
-    "for fi in files:\n",
-    "    pushToPostGresDB(fi, PGDB, PGUSER, PGPW)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2cb67e6-d14d-4229-9a13-469d84a363ac",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#set up parallel computing cluster\n",
-    "cluster = ipp.Cluster.from_file(\"/root/.ipython/profile_default/security/cluster-.json\")\n",
-    "rc = cluster.connect_client_sync()\n",
-    "rc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "774b762a-433c-4c58-9e0d-1439f730870f",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "# cluster = ipp.Cluster(n=4)\n",
-    "# await cluster.start_cluster()\n",
-    "# rc = cluster.connect_client_sync()\n",
-    "rc.wait_for_engines(n=4)\n",
-    "dview = rc[:]\n",
-    "dview.block=True\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e0abc366-8d44-4c95-98fb-6cd617aa8b4b",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# transfer to postgres go brr\n",
-    "files = getFileList()\n",
-    "result = dview.map_sync(pushToPostGresDB, files, [PGDB]*len(files), [PGUSER]*len(files), [PGPW]*len(files))\n",
-    "print(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17828805-dcb4-44d0-a053-8ca77d030e51",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#uncomment to install more modules\n",
-    "#%pip install geoalchemy2\n",
-    "\n",
-    "\n",
-    "#uncomment the next 2 to see all installed modules\n",
-    "# import os\n",
-    "# os.system(\"pip list\")"
+    "myFile = \"data/2021CensusAgRegions/lcar000b21a_e.dbf\"\n",
+    "tableName = \"RawCensusAgRegions\"\n",
+    "pushToPostGresDB(tableName, myFile, PGDB, PGUSER, PGPW)"
    ]
   }
  ],
@@ -201,6 +109,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
