import and check

--- a/src/WeatherStation/Files/stationRegions.ipynb
+++ b/src/WeatherStation/Files/stationRegions.ipynb
@@ -1139,12 +1139,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13 |Anaconda, Inc.| (default, Mar 16 2021, 11:37:27) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "39a489a6e931c97c24d8f8a73784e66fe6a52a6fce441173d73484de0ea6d4c6"
+    "hash": "5b3ded1ccb95c1d9bd405e7b823d9e85424cde40fbb5985eb47e999ef50e15b4"
    }
   }
  },
