--- a/src/WeatherStation/Files/Data_step3_CollectWeatherHourly.ipynb
+++ b/src/WeatherStation/Files/Data_step3_CollectWeatherHourly.ipynb
@@ -1352,21 +1352,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
