color palette updated

--- a/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
+++ b/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
@@ -962,7 +962,7 @@
    "outputs": [],
    "source": [
     "# list of 11 colors complimentary in rgba\n",
-    "colors = [\"#FF0000\", \"#FF7F00\", \"#FFFF00\", \"#00FF00\", \"#0000FF\", \"#4B0082\", \"#9400D3\", \"#FF00FF\", \"#FF0000\", \"#FF7F00\", \"#FFFF00\"]"
+    "colors = [\"#d3d3d3\", \"#556b2f\", \"#008080\", \"#ffff00\", \"#00ff7f\", \"#db7093\", \"#f0e68c\", \"#ffa07a\", \"#ee82ee\", \"#1e90ff\", \"#eee8aa\"]"
    ]
   },
   {
