region tbl station tbl import and cr labelling

--- a/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
+++ b/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
@@ -1571,8 +1571,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 231,
    "id": "e2360bbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove index column from gdfProjected\n",
+    "gdfProjected = gdfProjected.drop(columns=['index'])\n",
+    "\n",
+    "# reindex gdfProjected gdfStationsDly gdfStationsHly\n",
+    "gdfProjected = gdfProjected.reset_index(drop=True)\n",
+    "gdfStationsDly = gdfStationsDly.reset_index(drop=True)\n",
+    "gdfStationsHly = gdfStationsHly.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "id": "c685442b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pushGdfToPostGresDB(tableName: str, geodf: gpd.GeoDataFrame, db: str, user: str, pw: str) -> None:\n",
+    "    import geopandas as gpd\n",
+    "    from DataService import DataService\n",
+    "    \n",
+    "    db_service = DataService(db, user, pw)\n",
+    "    db_con = db_service.connect()\n",
+    "\n",
+    "    geodf.to_postgis(tableName, db_con, index=False, if_exists='replace')\n",
+    "    #db_service.cleanup()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "7bef9588",
+   "metadata": {},
+   "source": [
+    "# change next cell to code to push to DB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f7f068d",
+   "metadata": {},
+   "source": [
+    "### push dataframes to postgres\n",
+    "\n",
+    "tblName = 'CensusAgRegions'\n",
+    "pushGdfToPostGresDB(tblName, gdfProjected, PGDB, PGUSER, PGPW)\n",
+    "\n",
+    "tblName = 'StationsDly'\n",
+    "pushGdfToPostGresDB(tblName, gdfStationsDly, PGDB, PGUSER, PGPW)\n",
+    "\n",
+    "tblName = 'StationsHly'\n",
+    "pushGdfToPostGresDB(tblName, gdfStationsHly, PGDB, PGUSER, PGPW)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95dfb213",
    "metadata": {},
    "outputs": [],
    "source": []
