--- a/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
+++ b/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
@@ -597,6 +597,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "290ee9c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add column 'scraped' to gdfStationsDly and gdfStationsHly and set it to false\n",
+    "gdfStationsDly['scraped'] = False\n",
+    "gdfStationsHly['scraped'] = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e2360bbe",
    "metadata": {},
    "outputs": [],
@@ -625,7 +637,7 @@
     "    db_con = db_service.connect()\n",
     "\n",
     "    geodf.to_postgis(tableName, db_con, index=False, if_exists='replace')\n",
-    "    #db_service.cleanup()"
+    "    db_service.cleanup()"
    ]
   },
   {
