--- a/src/WeatherStation/Data_step scrape weather stations MB.ipynb
+++ b/src/WeatherStation/Data_step scrape weather stations MB.ipynb
@@ -17,9 +17,11 @@
     "import os\n",
     "import sys\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import geopandas as gpd\n",
     "import sqlalchemy as sq\n",
     "from matplotlib import pyplot as plt\n",
+    "from IPython.display import clear_output\n",
     "from dotenv import load_dotenv\n",
     "from DataService import DataService\n",
     "from ClimateDataRequester import ClimateDataRequester as cdr"
@@ -61,6 +63,141 @@
     "    db_con = dataService.connect()\n",
     "    df.to_sql(\"WeatherData\", db_con, if_exists=\"append\", index=False)\n",
     "    dataService.cleanup()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dataProcessA(df: pd.DataFrame, stationID: str) -> None:\n",
+    "    dataService = DataService(PGDB, PGUSER, PGPW)\n",
+    "    db_con = dataService.connect()\n",
+    "    try:\n",
+    "        df.drop(columns=['Data Quality', 'Max Temp Flag', 'Mean Temp Flag', 'Min Temp Flag', 'Heat Deg Days Flag', 'Cool Deg Days Flag', 'Spd of Max Gust (km/h)',\n",
+    "                         'Total Rain Flag', 'Total Snow Flag', 'Total Precip Flag', 'Snow on Grnd Flag', 'Dir of Max Gust Flag', 'Spd of Max Gust Flag',\n",
+    "                         'Heat Deg Days (°C)', 'Cool Deg Days (°C)', 'Longitude (x)', 'Latitude (y)', 'Station Name', 'Dir of Max Gust (10s deg)'], inplace=True)\n",
+    "    except:\n",
+    "        df.to_csv(\"Failed/\" + str(df.iloc[0, 0]) +\n",
+    "                  \"_unexpected_column_names.csv\", index=False)\n",
+    "\n",
+    "    # Climate ID\tDate/Time\tYear\tMonth\tDay\tMax Temp (Â°C)\tMin Temp (Â°C)\tMean Temp (Â°C)\tTotal Rain (mm)\tTotal Snow (cm)\tTotal Precip (mm)\tSnow on Grnd (cm)\tDir of Max Gust (10s deg)\tSpd of Max Gust (km/h)\n",
+    "    # ClimateID Date Year Month Day MaxTemp MinTemp MeanTemp TotalRain TotalSnow TotalPrecip SnowOnGrnd DirOfMaxGust SpdOfMaxGust\n",
+    "    df.rename(columns={df.columns[0]: \"ClimateID\"}, inplace=True)\n",
+    "    df.rename(columns={df.columns[1]: \"Date\"}, inplace=True)\n",
+    "    df.rename(columns={df.columns[2]: \"Year\"}, inplace=True)\n",
+    "    df.rename(columns={df.columns[3]: \"Month\"}, inplace=True)\n",
+    "    df.rename(columns={df.columns[4]: \"Day\"}, inplace=True)\n",
+    "    df.rename(columns={df.columns[5]: \"MaxTemp\"}, inplace=True)\n",
+    "    df.rename(columns={df.columns[6]: \"MinTemp\"}, inplace=True)\n",
+    "    df.rename(columns={df.columns[7]: \"MeanTemp\"}, inplace=True)\n",
+    "    df.rename(columns={df.columns[8]: \"TotalRain\"}, inplace=True)\n",
+    "    df.rename(columns={df.columns[9]: \"TotalSnow\"}, inplace=True)\n",
+    "    df.rename(columns={df.columns[10]: \"TotalPrecip\"}, inplace=True)\n",
+    "    df.rename(columns={df.columns[11]: \"SnowOnGrnd\"}, inplace=True)\n",
+    "\n",
+    "    df.dropna(subset=['MeanTemp'], inplace=True)\n",
+    "    df.loc[df['SnowOnGrnd'].isnull(), 'SnowOnGrnd'] = 0\n",
+    "    df.loc[df['TotalRain'].isnull(), 'TotalRain'] = 0\n",
+    "    df.loc[df['TotalSnow'].isnull(), 'TotalSnow'] = 0\n",
+    "    df.loc[df['TotalPrecip'].isnull(), 'TotalPrecip'] = 0\n",
+    "    df['MaxTemp'] = np.where(df['MaxTemp'].isnull(),\n",
+    "                             df['MeanTemp'], df['MaxTemp'])\n",
+    "    df['MinTemp'] = np.where(df['MinTemp'].isnull(),\n",
+    "                             df['MeanTemp'], df['MinTemp'])\n",
+    "\n",
+    "    df[['ClimateID', 'Date']] = df[['ClimateID', 'Date']].astype(str)\n",
+    "    df[['Year', 'Month', 'Day']] = df[['Year', 'Month', 'Day']].astype(int)\n",
+    "    df[['MaxTemp', 'MinTemp', 'MeanTemp', 'TotalRain', 'TotalSnow', 'TotalPrecip', 'SnowOnGrnd']] = df[[\n",
+    "        'MaxTemp', 'MinTemp', 'MeanTemp', 'TotalRain', 'TotalSnow', 'TotalPrecip', 'SnowOnGrnd']].astype(float)\n",
+    "\n",
+    "    # we try a db push, but if it fails, we place the data in a csv file\n",
+    "    # try:\n",
+    "    push_data(df)\n",
+    "    db_con.execute(\n",
+    "        \"UPDATE public.\\\"StationsDly\\\" SET \\\"scraped\\\" = True WHERE \\\"ClimateID\\\" like CAST(\\'{}\\' AS TEXT);\".format(stationID))\n",
+    "    # except:\n",
+    "    #     df.to_csv(\"Failed/\" + str(df.iloc[0, 0]) +\n",
+    "    #             \"_data_failed_dbpush.csv\", index=False)\n",
+    "    dataService.cleanup()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tableName = \"public.\\\"StationsDly\\\"\"\n",
+    "query = \"SELECT * FROM \" + tableName + \";\"\n",
+    "\n",
+    "\n",
+    "dataService = DataService(PGDB, PGUSER, PGPW)\n",
+    "db_con = dataService.connect()\n",
+    "dfStations = gpd.GeoDataFrame.from_postgis(query, db_con)\n",
+    "dataService.cleanup()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get list of MANITOBA stations\n",
+    "mbStations = dfStations.loc[dfStations['Province'] == 'MANITOBA']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# try first 2 stations\n",
+    "mbStations = mbStations.iloc[0:2, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "requester = cdr()\n",
+    "df = pd.DataFrame()\n",
+    "\n",
+    "for index, row in mbStations.iterrows():\n",
+    "    if row['scraped'] == False or row['scraped'] == None:\n",
+    "        try:\n",
+    "            startYr = 1995\n",
+    "            endYr = 2022\n",
+    "            if row['DLY First Year'] != None or row['DLY Last Year'] != None or row['DLY Last Year'] > 1995:\n",
+    "                if row['DLY First Year'] > 1995:\n",
+    "                    startYr = row['DLY First Year']\n",
+    "                if row['DLY Last Year'] > 1995:\n",
+    "                    endYr = row['DLY Last Year']\n",
+    "                \n",
+    "                stationID = str(row['ClimateID'])\n",
+    "                df = requester.get_data(\"MB\", stationID, startYr, endYr)\n",
+    "                clear_output(wait=False)\n",
+    "\n",
+    "                print(df.head())\n",
+    "                \n",
+    "                if not df.empty:\n",
+    "                    dataProcessA(df, stationID)\n",
+    "                else:\n",
+    "                    db_con.execute(\n",
+    "                        \"UPDATE public.\\\"StationsDly\\\" SET \\\"scraped\\\" = False WHERE \\\"ClimateID\\\" like CAST(\\'{}\\' AS TEXT);\".format(row['ClimateID']))\n",
+    "        except:\n",
+    "            print(\"Failed to scrape \" + row['ClimateID'])\n",
+    "            db_con.execute(\n",
+    "                \"UPDATE public.\\\"StationsDly\\\" SET \\\"scraped\\\" = False WHERE \\\"ClimateID\\\" like CAST(\\'{}\\' AS TEXT);\".format(row['ClimateID']))\n",
+    "    else:\n",
+    "        print(\"Data for station \" + str(row['ClimateID']) + \" already exists.\")\n",
+    "\n",
+    "    print(\"Processed row \" + str(index) + \" of \" + str(len(dfStations)))\n"
    ]
   },
   {
