--- a/src/WeatherStation/Data_step scrape weather stations MB.ipynb
+++ b/src/WeatherStation/Data_step scrape weather stations MB.ipynb
@@ -2,16 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.8/dist-packages/geopandas/_compat.py:124: UserWarning: The Shapely GEOS version (3.11.1-CAPI-1.17.1) is incompatible with the GEOS version PyGEOS was compiled with (3.10.4-CAPI-1.16.2). Conversions between both will be slow.\n",
+      "  warnings.warn(\n",
+      "/tmp/ipykernel_215844/1399629943.py:6: DeprecationWarning: Shapely 2.0 is installed, but because PyGEOS is also installed, GeoPandas still uses PyGEOS by default. However, starting with version 0.14, the default will switch to Shapely. To force to use Shapely 2.0 now, you can either uninstall PyGEOS or set the environment variable USE_PYGEOS=0. You can do this before starting the Python process, or in your code before importing geopandas:\n",
+      "\n",
+      "import os\n",
+      "os.environ['USE_PYGEOS'] = '0'\n",
+      "import geopandas\n",
+      "\n",
+      "In the next release, GeoPandas will switch to using Shapely by default, even if PyGEOS is installed. If you only have PyGEOS installed to get speed-ups, this switch should be smooth. However, if you are using PyGEOS directly (calling PyGEOS functions on geometries from GeoPandas), this will then stop working and you are encouraged to migrate from PyGEOS to Shapely 2.0 (https://shapely.readthedocs.io/en/latest/migration_pygeos.html).\n",
+      "  import geopandas as gpd\n"
+     ]
+    }
+   ],
    "source": [
     "#@title Import relevant modules\n",
     "import os\n",
@@ -29,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,8 +89,7 @@
     "                         'Total Rain Flag', 'Total Snow Flag', 'Total Precip Flag', 'Snow on Grnd Flag', 'Dir of Max Gust Flag', 'Spd of Max Gust Flag',\n",
     "                         'Heat Deg Days (°C)', 'Cool Deg Days (°C)', 'Longitude (x)', 'Latitude (y)', 'Station Name', 'Dir of Max Gust (10s deg)'], inplace=True)\n",
     "    except:\n",
-    "        df.to_csv(\"Failed/\" + str(df.iloc[0, 0]) +\n",
-    "                  \"_unexpected_column_names.csv\", index=False)\n",
+    "        df.to_csv(\"data/failed/\" + str(df.iloc[0, 0]) + \"_unexpected_column_names.csv\", index=False)\n",
     "\n",
     "    # Climate ID\tDate/Time\tYear\tMonth\tDay\tMax Temp (Â°C)\tMin Temp (Â°C)\tMean Temp (Â°C)\tTotal Rain (mm)\tTotal Snow (cm)\tTotal Precip (mm)\tSnow on Grnd (cm)\tDir of Max Gust (10s deg)\tSpd of Max Gust (km/h)\n",
     "    # ClimateID Date Year Month Day MaxTemp MinTemp MeanTemp TotalRain TotalSnow TotalPrecip SnowOnGrnd DirOfMaxGust SpdOfMaxGust\n",
@@ -115,8 +124,8 @@
     "    # we try a db push, but if it fails, we place the data in a csv file\n",
     "    # try:\n",
     "    push_data(df)\n",
-    "    db_con.execute(\n",
-    "        \"UPDATE public.\\\"StationsDly\\\" SET \\\"scraped\\\" = True WHERE \\\"ClimateID\\\" like CAST(\\'{}\\' AS TEXT);\".format(stationID))\n",
+    "    query = sq.text(\"UPDATE public.\\\"StationsDly\\\" SET \\\"scraped\\\" = True WHERE \\\"Climate ID\\\" like CAST(\\'{}\\' AS TEXT);\".format(stationID))\n",
+    "    db_con.execute(query)\n",
     "    # except:\n",
     "    #     df.to_csv(\"Failed/\" + str(df.iloc[0, 0]) +\n",
     "    #             \"_data_failed_dbpush.csv\", index=False)\n",
@@ -125,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,51 +144,274 @@
     "\n",
     "dataService = DataService(PGDB, PGUSER, PGPW)\n",
     "db_con = dataService.connect()\n",
-    "dfStations = gpd.GeoDataFrame.from_postgis(query, db_con)\n",
-    "dataService.cleanup()\n"
+    "dfStations = gpd.GeoDataFrame.from_postgis(query, db_con, geom_col='geometry')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get list of MANITOBA stations\n",
-    "mbStations = dfStations.loc[dfStations['Province'] == 'MANITOBA']"
+    "mbStations = dfStations.loc[dfStations['Province'] == 'MANITOBA']\n",
+    "\n",
+    "# remove stations with NaN DLY First Year\n",
+    "mbStations = mbStations.loc[mbStations['DLY First Year'].notnull()]\n",
+    "\n",
+    "# reindex \n",
+    "mbStations.reset_index(drop=True, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# try first 2 stations\n",
-    "mbStations = mbStations.iloc[0:2, :]"
+    "mbStations = mbStations.iloc[0:3, :]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Station Name</th>\n",
+       "      <th>Province</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Elevation</th>\n",
+       "      <th>Climate ID</th>\n",
+       "      <th>WMO Identifier</th>\n",
+       "      <th>TC Identifier</th>\n",
+       "      <th>First Year</th>\n",
+       "      <th>Last Year</th>\n",
+       "      <th>HLY First Year</th>\n",
+       "      <th>HLY Last Year</th>\n",
+       "      <th>DLY First Year</th>\n",
+       "      <th>DLY Last Year</th>\n",
+       "      <th>MLY First Year</th>\n",
+       "      <th>MLY Last Year</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>CRnum</th>\n",
+       "      <th>scraped</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>BACHELORS ISLAND MARINE</td>\n",
+       "      <td>MANITOBA</td>\n",
+       "      <td>51.8</td>\n",
+       "      <td>-99.9</td>\n",
+       "      <td>255.9</td>\n",
+       "      <td>5040131</td>\n",
+       "      <td>71143.0</td>\n",
+       "      <td>WBL</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>1994.0</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>1994.0</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>1996.0</td>\n",
+       "      <td>2004.0</td>\n",
+       "      <td>POINT (5652086.326 1767996.578)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BERENS RIVER A</td>\n",
+       "      <td>MANITOBA</td>\n",
+       "      <td>52.4</td>\n",
+       "      <td>-97.0</td>\n",
+       "      <td>222.2</td>\n",
+       "      <td>5030204</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>YBV</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2015.0</td>\n",
+       "      <td>2022.0</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>2022.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (5853400.266 1814545.117)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BERENS RIVER CS</td>\n",
+       "      <td>MANITOBA</td>\n",
+       "      <td>52.4</td>\n",
+       "      <td>-97.0</td>\n",
+       "      <td>221.9</td>\n",
+       "      <td>5030203</td>\n",
+       "      <td>71158.0</td>\n",
+       "      <td>WCF</td>\n",
+       "      <td>1985</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1985.0</td>\n",
+       "      <td>2022.0</td>\n",
+       "      <td>1985.0</td>\n",
+       "      <td>2022.0</td>\n",
+       "      <td>1985.0</td>\n",
+       "      <td>2007.0</td>\n",
+       "      <td>POINT (5853400.266 1814545.117)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Station Name  Province  Latitude  Longitude  Elevation   \n",
+       "0  BACHELORS ISLAND MARINE  MANITOBA      51.8      -99.9      255.9  \\\n",
+       "1           BERENS RIVER A  MANITOBA      52.4      -97.0      222.2   \n",
+       "2          BERENS RIVER CS  MANITOBA      52.4      -97.0      221.9   \n",
+       "\n",
+       "  Climate ID  WMO Identifier TC Identifier  First Year  Last Year   \n",
+       "0    5040131         71143.0           WBL        1994       2012  \\\n",
+       "1    5030204             NaN           YBV        2015       2022   \n",
+       "2    5030203         71158.0           WCF        1985       2022   \n",
+       "\n",
+       "   HLY First Year  HLY Last Year  DLY First Year  DLY Last Year   \n",
+       "0          1994.0         2012.0          1994.0         2012.0  \\\n",
+       "1          2015.0         2022.0          2018.0         2022.0   \n",
+       "2          1985.0         2022.0          1985.0         2022.0   \n",
+       "\n",
+       "   MLY First Year  MLY Last Year                         geometry  CRnum   \n",
+       "0          1996.0         2004.0  POINT (5652086.326 1767996.578)      0  \\\n",
+       "1             NaN            NaN  POINT (5853400.266 1814545.117)      0   \n",
+       "2          1985.0         2007.0  POINT (5853400.266 1814545.117)      0   \n",
+       "\n",
+       "  scraped  \n",
+       "0    None  \n",
+       "1    None  \n",
+       "2    None  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mbStations.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Longitude (x)  Latitude (y)     Station Name  Climate ID   Date/Time  Year   \n",
+      "0          -97.0          52.4  BERENS RIVER CS     5030203  2022-12-01  2022  \\\n",
+      "1          -97.0          52.4  BERENS RIVER CS     5030203  2022-12-02  2022   \n",
+      "2          -97.0          52.4  BERENS RIVER CS     5030203  2022-12-03  2022   \n",
+      "3          -97.0          52.4  BERENS RIVER CS     5030203  2022-12-04  2022   \n",
+      "4          -97.0          52.4  BERENS RIVER CS     5030203  2022-12-05  2022   \n",
+      "\n",
+      "   Month  Day  Data Quality  Max Temp (°C) Max Temp Flag  Min Temp (°C)   \n",
+      "0     12    1           NaN          -13.2           NaN          -23.5  \\\n",
+      "1     12    2           NaN          -14.4           NaN          -27.8   \n",
+      "2     12    3           NaN          -16.0           NaN          -22.8   \n",
+      "3     12    4           NaN           -8.8           NaN          -20.7   \n",
+      "4     12    5           NaN          -18.2           NaN          -32.1   \n",
+      "\n",
+      "  Min Temp Flag  Mean Temp (°C) Mean Temp Flag  Heat Deg Days (°C)   \n",
+      "0           NaN           -18.3            NaN                36.3  \\\n",
+      "1           NaN           -21.1            NaN                39.1   \n",
+      "2           NaN           -19.4            NaN                37.4   \n",
+      "3           NaN           -14.8            NaN                32.8   \n",
+      "4           NaN           -25.1            NaN                43.1   \n",
+      "\n",
+      "  Heat Deg Days Flag  Cool Deg Days (°C) Cool Deg Days Flag  Total Rain (mm)   \n",
+      "0                NaN                 0.0                NaN              NaN  \\\n",
+      "1                NaN                 0.0                NaN              NaN   \n",
+      "2                NaN                 0.0                NaN              NaN   \n",
+      "3                NaN                 0.0                NaN              NaN   \n",
+      "4                NaN                 0.0                NaN              NaN   \n",
+      "\n",
+      "  Total Rain Flag  Total Snow (cm) Total Snow Flag  Total Precip (mm)   \n",
+      "0             NaN              NaN             NaN                1.2  \\\n",
+      "1             NaN              NaN             NaN                2.0   \n",
+      "2             NaN              NaN             NaN                0.1   \n",
+      "3             NaN              NaN             NaN                0.8   \n",
+      "4             NaN              NaN             NaN                0.0   \n",
+      "\n",
+      "  Total Precip Flag  Snow on Grnd (cm) Snow on Grnd Flag   \n",
+      "0               NaN               20.0               NaN  \\\n",
+      "1               NaN               22.0               NaN   \n",
+      "2               NaN               22.0               NaN   \n",
+      "3               NaN               22.0               NaN   \n",
+      "4               NaN               24.0               NaN   \n",
+      "\n",
+      "   Dir of Max Gust (10s deg) Dir of Max Gust Flag Spd of Max Gust (km/h)   \n",
+      "0                        NaN                  NaN                    NaN  \\\n",
+      "1                        NaN                  NaN                    NaN   \n",
+      "2                       27.0                  NaN                   37.0   \n",
+      "3                       30.0                  NaN                   36.0   \n",
+      "4                        NaN                  NaN                    NaN   \n",
+      "\n",
+      "  Spd of Max Gust Flag  \n",
+      "0                  NaN  \n",
+      "1                  NaN  \n",
+      "2                  NaN  \n",
+      "3                  NaN  \n",
+      "4                  NaN  \n",
+      "Processed row 2 of 3\n"
+     ]
+    }
+   ],
    "source": [
     "requester = cdr()\n",
     "df = pd.DataFrame()\n",
     "\n",
     "for index, row in mbStations.iterrows():\n",
+    "                \n",
+    "    stationID = str(row['Climate ID'])\n",
+    "    errQuery = sq.text(\"UPDATE public.\\\"StationsDly\\\" SET \\\"scraped\\\" = False WHERE \\\"Climate ID\\\" like CAST(\\'{}\\' AS TEXT);\".format(stationID))\n",
     "    if row['scraped'] == False or row['scraped'] == None:\n",
     "        try:\n",
     "            startYr = 1995\n",
     "            endYr = 2022\n",
-    "            if row['DLY First Year'] != None or row['DLY Last Year'] != None or row['DLY Last Year'] > 1995:\n",
+    "            if row['DLY First Year'] != np.NAN or row['DLY Last Year'] != np.NAN or row['DLY Last Year'] > 1995:\n",
     "                if row['DLY First Year'] > 1995:\n",
     "                    startYr = row['DLY First Year']\n",
     "                if row['DLY Last Year'] > 1995:\n",
     "                    endYr = row['DLY Last Year']\n",
-    "                \n",
-    "                stationID = str(row['ClimateID'])\n",
     "                df = requester.get_data(\"MB\", stationID, startYr, endYr)\n",
     "                clear_output(wait=False)\n",
     "\n",
@@ -188,34 +420,44 @@
     "                if not df.empty:\n",
     "                    dataProcessA(df, stationID)\n",
     "                else:\n",
-    "                    db_con.execute(\n",
-    "                        \"UPDATE public.\\\"StationsDly\\\" SET \\\"scraped\\\" = False WHERE \\\"ClimateID\\\" like CAST(\\'{}\\' AS TEXT);\".format(row['ClimateID']))\n",
-    "        except:\n",
-    "            print(\"Failed to scrape \" + row['ClimateID'])\n",
-    "            db_con.execute(\n",
-    "                \"UPDATE public.\\\"StationsDly\\\" SET \\\"scraped\\\" = False WHERE \\\"ClimateID\\\" like CAST(\\'{}\\' AS TEXT);\".format(row['ClimateID']))\n",
+    "                    db_con.execute(errQuery)\n",
+    "        except Exception as e:\n",
+    "            print(\"Failed to scrape \" + stationID)\n",
+    "            print(e)\n",
+    "            db_con.execute(errQuery)\n",
     "    else:\n",
-    "        print(\"Data for station \" + str(row['ClimateID']) + \" already exists.\")\n",
+    "        print(\"Data for station \" + str(stationID) + \" already exists.\")\n",
     "\n",
-    "    print(\"Processed row \" + str(index) + \" of \" + str(len(dfStations)))\n"
+    "    print(\"Processed row \" + str(index + 1) + \" of \" + str(len(mbStations)))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "dataService.cleanup()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
   "orig_nbformat": 4,
