added Dane's files because temp branch is cursed

--- a/src/WeatherStation/Data_step scrape weather stations MB.ipynb
+++ b/src/WeatherStation/Data_step scrape weather stations MB.ipynb
@@ -170,7 +170,7 @@
    "outputs": [],
    "source": [
     "# try first 2 stations\n",
-    "mbStations = mbStations.iloc[0:3, :]"
+    "# mbStations = mbStations.iloc[0:3, :]"
    ]
   },
   {
