SK weather station data scraping

--- a/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
+++ b/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cf8e8455-a89d-418f-8ffe-4c93fadbcef0",
    "metadata": {},
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "0343b664",
    "metadata": {},
    "outputs": [],
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "f60d3f06",
    "metadata": {},
    "outputs": [],
@@ -67,29 +68,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "234bc8fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "regions = \"data/2006CensusAgRegions/gcar000b07a_e.dbf\"\n",
+    "regions = \"/data/WeatherStation/Data/2006CensusAgRegions/gcar000b07a_e.shp\"\n",
     "gdfRegions = gpd.read_file(regions, encoding='utf-8')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "2e61d25e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stations = \"data/climate_station_list.csv\"\n",
+    "stations = \"/data/WeatherStation/Data/climate_station_list.csv\"\n",
     "dfStations = pd.read_csv(stations)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "38863e75",
    "metadata": {},
    "outputs": [],
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "d64449ea",
    "metadata": {},
    "outputs": [],
@@ -117,21 +118,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdfRegions = gdfRegions.to_crs(\"EPSG:3347\")\n",
+    "gdfRegions = gdfRegions.to_crs(crs={'init': \"EPSG:3347\"})\n",
     "gdfStationsHly = gdfStationsHly.set_crs(\"EPSG:4326\", allow_override=True)\n",
     "gdfStationsHly = gdfStationsHly.to_crs(\"EPSG:3347\")\n",
     "gdfStationsDly = gdfStationsDly.set_crs(\"EPSG:4326\", allow_override=True)\n",
     "gdfStationsDly = gdfStationsDly.to_crs(\"EPSG:3347\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0cf2b58e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# verification\n"
    ]
   },
   {
@@ -178,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "729e8851",
    "metadata": {},
    "outputs": [],
@@ -192,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "753ff94d",
    "metadata": {},
    "outputs": [],
@@ -243,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "718b0a12",
    "metadata": {},
    "outputs": [],
@@ -264,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "d42c1e9e",
    "metadata": {},
    "outputs": [],
@@ -275,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "6c500e04",
    "metadata": {},
    "outputs": [],
@@ -285,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "4c7de4c9",
    "metadata": {},
    "outputs": [],
@@ -296,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "7153cc45",
    "metadata": {},
    "outputs": [],
@@ -320,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "f65263be",
    "metadata": {},
    "outputs": [],
@@ -337,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "f1eae96e",
    "metadata": {},
    "outputs": [],
@@ -356,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "bbf60952",
    "metadata": {},
    "outputs": [],
@@ -367,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "d5e75ff4",
    "metadata": {},
    "outputs": [],
@@ -384,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "dd12508f",
    "metadata": {},
    "outputs": [],
@@ -401,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "d55a4247",
    "metadata": {},
    "outputs": [],
@@ -416,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "1baf2134",
    "metadata": {},
    "outputs": [],
@@ -437,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "c18a193f",
    "metadata": {},
    "outputs": [],
@@ -458,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "8018153f",
    "metadata": {},
    "outputs": [],
@@ -479,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "3b97b663",
    "metadata": {},
    "outputs": [],
@@ -514,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "3c829c17",
    "metadata": {},
    "outputs": [],
@@ -608,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "e2360bbe",
    "metadata": {},
    "outputs": [],
@@ -624,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "c685442b",
    "metadata": {},
    "outputs": [],
@@ -650,6 +641,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8f7f068d",
    "metadata": {},
