scrapeStations is  runable and updated import geo

--- a/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
+++ b/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
@@ -597,18 +597,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "290ee9c3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# add column 'scraped' to gdfStationsDly and gdfStationsHly and set it to false\n",
-    "gdfStationsDly['scraped'] = False\n",
-    "gdfStationsHly['scraped'] = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "e2360bbe",
    "metadata": {},
    "outputs": [],
@@ -641,6 +629,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16528402",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "gdfProjected.rename(columns={gdfProjected.columns[0]: \"car_uid\"}, inplace=True)\n",
+    "gdfProjected.rename(columns={gdfProjected.columns[1]: \"car_name\"}, inplace=True)\n",
+    "gdfProjected.rename(columns={gdfProjected.columns[2]: \"pr_uid\"}, inplace=True)\n",
+    "gdfProjected.rename(columns={gdfProjected.columns[3]: \"ag_uid\"}, inplace=True)\n",
+    "\n",
+    "\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[0]: \"station_name\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[1]: \"province\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[2]: \"latitude\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[3]: \"longitude\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[4]: \"elevation\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[5]: \"climate_id\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[6]: \"wmo_identifier\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[7]: \"tc_identifier\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[8]: \"first_year\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[9]: \"last_year\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[10]: \"hly_first_year\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[11]: \"hly_last_year\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[12]: \"dly_first_year\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[13]: \"dly_last_year\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[14]: \"mly_last_year\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[15]: \"mly_last_year\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[16]: \"geometry\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[17]: \"cr_num\"}, inplace=True)\n",
+    "\n",
+    "gdfStationsDly.loc[gdfStationsDly['province'] == 'ALBERTA', 'province'] = 'AB'\n",
+    "gdfStationsDly.loc[gdfStationsDly['province'] == 'MANITOBA', 'province'] = 'MB'\n",
+    "gdfStationsDly.loc[gdfStationsDly['province'] == 'SASKATCHEWAN', 'province'] = 'SK'\n",
+    "\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[0]: \"station_name\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[1]: \"province\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[2]: \"latitude\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[3]: \"longitude\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[4]: \"elevation\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[5]: \"climate_id\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[6]: \"wmo_identifier\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[7]: \"tc_identifier\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[8]: \"first_year\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[9]: \"last_year\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[10]: \"hly_first_year\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[11]: \"hly_last_year\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[12]: \"dly_first_year\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[13]: \"dly_last_year\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[14]: \"mly_last_year\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[15]: \"mly_last_year\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[16]: \"geometry\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[17]: \"cr_num\"}, inplace=True)\n",
+    "\n",
+    "gdfStationsHly.loc[gdfStationsHly['province'] == 'ALBERTA', 'province'] = 'AB'\n",
+    "gdfStationsHly.loc[gdfStationsHly['province'] == 'MANITOBA', 'province'] = 'MB'\n",
+    "gdfStationsHly.loc[gdfStationsHly['province'] == 'SASKATCHEWAN', 'province'] = 'SK'"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "7bef9588",
@@ -650,19 +699,20 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8f7f068d",
    "metadata": {},
    "source": [
     "### push dataframes to postgres\n",
     "\n",
-    "tblName = 'CensusAgRegions'\n",
+    "tblName = 'census_ag_regions'\n",
     "pushGdfToPostGresDB(tblName, gdfProjected, PGDB, PGUSER, PGPW)\n",
     "\n",
-    "tblName = 'StationsDly'\n",
+    "tblName = 'stations_dly'\n",
     "pushGdfToPostGresDB(tblName, gdfStationsDly, PGDB, PGUSER, PGPW)\n",
     "\n",
-    "tblName = 'StationsHly'\n",
+    "tblName = 'stations_hly'\n",
     "pushGdfToPostGresDB(tblName, gdfStationsHly, PGDB, PGUSER, PGPW)\n"
    ]
   },
