removed province names and added table constants

--- a/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
+++ b/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
@@ -647,7 +647,7 @@
     "gdfStationsDly.rename(columns={gdfStationsDly.columns[2]: \"latitude\"}, inplace=True)\n",
     "gdfStationsDly.rename(columns={gdfStationsDly.columns[3]: \"longitude\"}, inplace=True)\n",
     "gdfStationsDly.rename(columns={gdfStationsDly.columns[4]: \"elevation\"}, inplace=True)\n",
-    "gdfStationsDly.rename(columns={gdfStationsDly.columns[5]: \"climate_id\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[5]: \"station_id\"}, inplace=True)\n",
     "gdfStationsDly.rename(columns={gdfStationsDly.columns[6]: \"wmo_identifier\"}, inplace=True)\n",
     "gdfStationsDly.rename(columns={gdfStationsDly.columns[7]: \"tc_identifier\"}, inplace=True)\n",
     "gdfStationsDly.rename(columns={gdfStationsDly.columns[8]: \"first_year\"}, inplace=True)\n",
@@ -670,7 +670,7 @@
     "gdfStationsHly.rename(columns={gdfStationsHly.columns[2]: \"latitude\"}, inplace=True)\n",
     "gdfStationsHly.rename(columns={gdfStationsHly.columns[3]: \"longitude\"}, inplace=True)\n",
     "gdfStationsHly.rename(columns={gdfStationsHly.columns[4]: \"elevation\"}, inplace=True)\n",
-    "gdfStationsHly.rename(columns={gdfStationsHly.columns[5]: \"climate_id\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[5]: \"station_id\"}, inplace=True)\n",
     "gdfStationsHly.rename(columns={gdfStationsHly.columns[6]: \"wmo_identifier\"}, inplace=True)\n",
     "gdfStationsHly.rename(columns={gdfStationsHly.columns[7]: \"tc_identifier\"}, inplace=True)\n",
     "gdfStationsHly.rename(columns={gdfStationsHly.columns[8]: \"first_year\"}, inplace=True)\n",
