fixed duplicate column issue

--- a/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
+++ b/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
@@ -58,8 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir('/data')\n",
-    "load_dotenv('docker/.env')\n",
+    "\n",
+    "load_dotenv()\n",
     "PGUSER = os.getenv('POSTGRES_USER')\n",
     "PGPW = os.getenv('POSTGRES_PW')\n",
     "PGDB = os.getenv('POSTGRES_DB')"
@@ -656,7 +656,7 @@
     "gdfStationsDly.rename(columns={gdfStationsDly.columns[11]: \"hly_last_year\"}, inplace=True)\n",
     "gdfStationsDly.rename(columns={gdfStationsDly.columns[12]: \"dly_first_year\"}, inplace=True)\n",
     "gdfStationsDly.rename(columns={gdfStationsDly.columns[13]: \"dly_last_year\"}, inplace=True)\n",
-    "gdfStationsDly.rename(columns={gdfStationsDly.columns[14]: \"mly_last_year\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[14]: \"mly_first_year\"}, inplace=True)\n",
     "gdfStationsDly.rename(columns={gdfStationsDly.columns[15]: \"mly_last_year\"}, inplace=True)\n",
     "gdfStationsDly.rename(columns={gdfStationsDly.columns[16]: \"geometry\"}, inplace=True)\n",
     "gdfStationsDly.rename(columns={gdfStationsDly.columns[17]: \"cr_num\"}, inplace=True)\n",
@@ -679,7 +679,7 @@
     "gdfStationsHly.rename(columns={gdfStationsHly.columns[11]: \"hly_last_year\"}, inplace=True)\n",
     "gdfStationsHly.rename(columns={gdfStationsHly.columns[12]: \"dly_first_year\"}, inplace=True)\n",
     "gdfStationsHly.rename(columns={gdfStationsHly.columns[13]: \"dly_last_year\"}, inplace=True)\n",
-    "gdfStationsHly.rename(columns={gdfStationsHly.columns[14]: \"mly_last_year\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[14]: \"mly_first_year\"}, inplace=True)\n",
     "gdfStationsHly.rename(columns={gdfStationsHly.columns[15]: \"mly_last_year\"}, inplace=True)\n",
     "gdfStationsHly.rename(columns={gdfStationsHly.columns[16]: \"geometry\"}, inplace=True)\n",
     "gdfStationsHly.rename(columns={gdfStationsHly.columns[17]: \"cr_num\"}, inplace=True)\n",
@@ -741,7 +741,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.0"
   },
   "vscode": {
    "interpreter": {
