created import ergot script and moved shared files

--- a/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
+++ b/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
@@ -619,7 +619,10 @@
    "source": [
     "def pushGdfToPostGresDB(tableName: str, geodf: gpd.GeoDataFrame, db: str, user: str, pw: str) -> None:\n",
     "    import geopandas as gpd\n",
+    "    \n",
+    "    sys.path.append('../')\n",
     "    from DataService import DataService\n",
+    "\n",
     "    \n",
     "    db_service = DataService(db, user, pw)\n",
     "    db_con = db_service.connect()\n",
