--- a/src/WeatherStation/Data_step scrape weather stations MB.ipynb
+++ b/src/WeatherStation/Data_step scrape weather stations MB.ipynb
@@ -33,8 +33,10 @@
     "from matplotlib import pyplot as plt\n",
     "from IPython.display import clear_output\n",
     "from dotenv import load_dotenv\n",
-    "from DataService import DataService\n",
-    "from ClimateDataRequester import ClimateDataRequester as cdr"
+    "from ClimateDataRequester import ClimateDataRequester as cdr\n",
+    "\n",
+    "sys.path.append('../')\n",
+    "from DataService import DataService"
    ]
   },
   {
